name:                hstack
version:             0.1.0.0
synopsis:            Serving infrastructure stack.
-- description:         
license:             MIT
license-file:        LICENSE
author:              David Hinkes
maintainer:          david.hinkes@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable example-client
  main-is: Client.hs
  hs-source-dirs: example
  build-depends: hstack,
                 base ==4.6.*

executable example-server
  main-is: Server.hs
  hs-source-dirs: example 
  build-depends: hstack,
                 base ==4.6.*

library
  exposed: True
  ghc-options: -Wall
  exposed-modules: Network.Hstack,
                   Network.Hstack.Example
                   Network.Hstack.Internal
  hs-source-dirs: src       
  build-depends: base ==4.6.*,
                 bytestring,
                 cereal,
                 containers,
                 HTTP,
                 json,
                 mtl,
                 network,
                 snap-core,
                 snap-server,
                 stm,
                 transformers
test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends: hstack,
                 base ==4.6.*,
                 Cabal,
                 mtl,
                 test-framework,
                 test-framework-quickcheck2
  main-is: Test.hs
